--- a/Web.config
+++ b/Web.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0"?>
 <configuration>
 
-  <location path="docs">
+  <location path="Media">
     <system.webServer>
       <directoryBrowse enabled="true" />
       <!--<staticContent>
