--- a/Web.config
+++ b/Web.config
@@ -25,6 +25,15 @@
       </staticContent>-->
     </system.webServer>
   </location>
+  <location path="docs">
+    <system.webServer>
+      <directoryBrowse enabled="true" />
+      <!--<staticContent>
+        <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="365.00:00:00" />
+      </staticContent>-->
+    </system.webServer>
+  </location>
+
   <appSettings>
     <add key="PageInspector:ServerCodeMappingSupport" value="Disabled" />
     <!--<add key="vs:EnableBrowserLink" value="false"/>-->
