--- a/Web.config
+++ b/Web.config
@@ -1,9 +1,8 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-
   <location path="Media">
     <system.webServer>
-      <directoryBrowse enabled="true" />
+      <directoryBrowse enabled="true"/>
       <!--<staticContent>
         <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="365.00:00:00" />
       </staticContent>-->
@@ -11,7 +10,7 @@
   </location>
   <location path="images">
     <system.webServer>
-      <directoryBrowse enabled="true" />
+      <directoryBrowse enabled="true"/>
       <!--<staticContent>
         <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="365.00:00:00" />
       </staticContent>-->
@@ -19,7 +18,7 @@
   </location>
   <location path="js">
     <system.webServer>
-      <directoryBrowse enabled="true" />
+      <directoryBrowse enabled="true"/>
       <!--<staticContent>
         <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="365.00:00:00" />
       </staticContent>-->
@@ -27,19 +26,27 @@
   </location>
   <location path="docs">
     <system.webServer>
-      <directoryBrowse enabled="true" />
+      <directoryBrowse enabled="true"/>
       <!--<staticContent>
         <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="365.00:00:00" />
       </staticContent>-->
     </system.webServer>
   </location>
-
   <appSettings>
-    <add key="PageInspector:ServerCodeMappingSupport" value="Disabled" />
+    <add key="PageInspector:ServerCodeMappingSupport" value="Disabled"/>
     <!--<add key="vs:EnableBrowserLink" value="false"/>-->
   </appSettings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.0"/>
+    <compilation debug="true" targetFramework="4.5"/>
     <customErrors mode="Off"/>
+    <pages controlRenderingCompatibilityVersion="4.0"/>
   </system.web>
 </configuration>
