--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 /UIMyPersonal/AboutMe/AboutMe.aspx.cs
 /UIMyPersonal/AboutMe/AboutMe.aspx.cs
 /.vs/GKWeb/v15
+/Media/ARRehman/InterestingSongs
+/UIMusic/ARRehman/InterestingSongs.aspx
+/UIMusic/ARRehman/InterestingSongs.aspx.cs
