Added Base Projects

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /Media/ARRehman/InterestingSongs
 /UIMusic/ARRehman/InterestingSongs.aspx
 /UIMusic/ARRehman/InterestingSongs.aspx.cs
+/UIMusic/ARRehman/js/metro.js
