newURL rewrite added.ton soft  package updated.

--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <configuration>
   <location path="Media">
     <system.webServer>
@@ -25,12 +25,19 @@
     </system.webServer>
   </location>
   <location path="docs">
+    
+    
+
     <system.webServer>
       <directoryBrowse enabled="true"/>
       <!--<staticContent>
         <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="365.00:00:00" />
       </staticContent>-->
+      
     </system.webServer>
+
+
+    
   </location>
   <appSettings>
     <add key="PageInspector:ServerCodeMappingSupport" value="Disabled"/>
@@ -49,4 +56,35 @@
     <customErrors mode="Off"/>
     <pages controlRenderingCompatibilityVersion="4.0"/>
   </system.web>
+  <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true">
+      <remove name="UrlRoutingModule"/>
+      <add name="UrlRoutingModule" type="UrlRewrite.RewriteModule, UrlRewrite"/>
+    </modules>
+<!--<rewrite>
+  <rules>
+     <rule name="TestRule" stopProcessing="true">
+     <match url="(.*)" />
+     <conditions logicalGrouping="MatchAny" trackAllCaptures="false">
+        <add input="{HTTP_HOST}{REQUEST_URI}" pattern="http://localhost:53295/Default.aspx" />
+       <add input="{HTTP_HOST}{REQUEST_URI}" pattern="http://subtlegopala.com/Default.aspx" />
+
+     </conditions>
+     <action type="Redirect" url="http://gopala-krishna.com" redirectType="Permanent"/>
+     </rule>
+  </rules>
+</rewrite>-->
+
+    <!--<rewrite>
+      <rules>
+        <rule name="WP Redirect" stopProcessing="true">
+          <match url="http://subtlegopala.com/Default.aspx" ignoreCase="true" />
+          <action type="Redirect" redirectType="Permanent" url="http://gopala-krishna.com" />
+        </rule>
+      </rules>
+    </rewrite>-->
+  </system.webServer>
+
+  
+  
 </configuration>
