--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net40" />
+  <package id="Ioc.Modules" version="1.2.1" targetFramework="net45" />
+  <package id="Ioc.Modules.Ninject" version="1.1.3" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net45" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
+  <package id="UrlRewrite.Net" version="1.2.8" targetFramework="net45" />
 </packages>
