--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/GKWeb/v15
+/Media/ARRehman/InterestingSongs/aIntiMundhunna.mp3
