--- a/Web.config
+++ b/Web.config
@@ -67,7 +67,7 @@
      <match url="(.*)" />
      <conditions logicalGrouping="MatchAny" trackAllCaptures="false">
         <add input="{HTTP_HOST}{REQUEST_URI}" pattern="http://localhost:53295/Default.aspx" />
-       <add input="{HTTP_HOST}{REQUEST_URI}" pattern="http://subtlegopala.com/Default.aspx" />
+       <add input="{HTTP_HOST}{REQUEST_URI}" pattern="http://gopala-krishna.com/Default.aspx" />
 
      </conditions>
      <action type="Redirect" url="http://gopala-krishna.com" redirectType="Permanent"/>
@@ -78,7 +78,7 @@
     <!--<rewrite>
       <rules>
         <rule name="WP Redirect" stopProcessing="true">
-          <match url="http://subtlegopala.com/Default.aspx" ignoreCase="true" />
+          <match url="http://gopala-krishna.com/Default.aspx" ignoreCase="true" />
           <action type="Redirect" redirectType="Permanent" url="http://gopala-krishna.com" />
         </rule>
       </rules>
